--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
+@font-face {
+  font-family: 'Speedee';
+  src:  url(/assets/Speedee_Rg.ttf);
+}
+
 .btw-button-widget {
+  font-family: Speedee, sans-serif;
   position: fixed;
   min-height: 48px!important;
   height: 48px!important;
@@ -11,6 +17,8 @@
   border: none !important;
   background: none;
   border-radius: 50%;
+  display: flex;
+  align-items: center;
 }
 
 .btw-button-widget__text {
@@ -20,7 +28,6 @@
   width: auto;
   text-align: right;
   font-size: 14px;
-  margin-right: 35px;
   color: #000000;
   margin-top: 6px;
   padding: 8px 20px 8px 10px;
@@ -32,26 +39,11 @@
   transition: all 0.6s ease-in;
 }
 
-.btw-button-widget__icon-container {
-  display: inline;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  padding: 6px;
+.btw-button-widget__icon {
+  display: inline-block;
   width: 36px;
   height: 36px;
   cursor: pointer;
-  position: absolute;
-  right: 0;
-}
-
-.btw-button-widget__icon {
-  background-image: url('./mcdonald\'s_icon.jpeg');
-  display: inline-block;
-
-  width: 100%;
-  height: 100%;
-  background-size: cover;
 }
 
 .inputHost {
